welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value versLAvant
 if (versLAvant== true) {
     ^Program:5: error: not found: value nbPas
 	for ( i <-1 to nbPas) {
                       ^